--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,11 @@
     "@testing-library/user-event": "^13.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "react-vertical-timeline-component": "^3.5.3",
     "tailwind-variants": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
